Added maps, added join and unjoin groups, fixed proposed activities, bug fixes.