@@ -1,17 +1,20 @@
 package com.fitivity;
 
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Calendar;
+import java.util.Date;
+import java.util.LinkedList;
 import java.util.List;
 
 import com.fitivity.PullToRefreshListView.*;
 import com.parse.FindCallback;
+import com.parse.Parse;
 import com.parse.ParseException;
 import com.parse.ParseGeoPoint;
 import com.parse.ParseObject;
 import com.parse.ParseQuery;
 import com.parse.ParseUser;
-import com.parse.PushService;
 
 import android.app.Activity;
 import android.app.AlertDialog;
@@ -31,6 +34,12 @@ import android.widget.EditText;
 import android.widget.ImageView;
 import android.widget.TextView;
 
+/**
+ * This class is for visiting a group page.
+ * It can either be reached by creating a group or
+ * by clicking on a group in the discover feed
+ * @author Trevor Hodde
+ */
 public class GroupActivity extends Activity {
 
 	TextView location;
@@ -39,59 +48,96 @@ public class GroupActivity extends Activity {
 	PullToRefreshListView proposedAcitivityList;
 	Button membersButton;
 	Button joinButton;
+	Button mapButton;
 	ParseObject date;
-	List<ParseObject> activityList;
 	boolean underDailyLimit;
+	public ParseObject firstDate;
+	public ParseObject secondDate;
+	public String today;
+	public String groupID;
+	public ParseObject currentMember;
 
 	@Override
 	protected void onCreate(Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
 		setContentView(R.layout.group_view);
+		
+		//initialize the connection to parse
+		Parse.initialize(this, "MmUj6HxQcfLSOUs31lG7uNVx9sl5dZR6gv0FqGHq", "krpZsVM2UrU71NCxDbdAmbEMq1EXdpygkl251Wjl");
 
+		//grab references to the controls on the screen
 		location = (TextView) findViewById(R.id.group_display_name);
 		activity = (TextView) findViewById(R.id.group_activity_name);
 		groupActivity = (ImageView) findViewById(R.id.group_activity);
 		membersButton = (Button) findViewById(R.id.Button);
 		joinButton = (Button) findViewById(R.id.group_join);
+		mapButton = (Button) findViewById(R.id.group_map);
 
 		location.setText(getIntent().getStringExtra("locationText"));
 		activity.setText(getIntent().getStringExtra("activityText"));
+		groupID = getIntent().getStringExtra("GroupId");
 		
 		//make sure the user is under the daily limit for proposed activites
-		underDailyLimit = checkDailyCount();
+		checkDailyCount();
+		today = checkTodaysDate();
 		
-		joinButton.setOnClickListener(new OnClickListener() {
+		//Quickly check to see if the user is already in the group or not
+		ParseQuery query = new ParseQuery("GroupMembers");
+		query.whereEqualTo("user", ParseUser.getCurrentUser());
+		query.whereEqualTo("group", groupID);
+		query.findInBackground(new FindCallback() {
 			@Override
-			public void onClick(View arg0) {
-				//TODO: ADD USER TO GROUP, DISPLAY MESSAGE SAYING THEY JOINED
-				if(joinButton.getText().equals("Join")) {
-					try {
-						ParseQuery query = new ParseQuery("Groups");
-						query.whereEqualTo("place", getIntent().getStringExtra("locationText"));
-						query.whereEqualTo("activity",getIntent().getStringExtra("activityText"));
-
-						ParseGeoPoint point = new ParseGeoPoint(
-								getIntent().getDoubleExtra("latitude", 0),
-								getIntent().getDoubleExtra("longitude", 0));
-
-						query.whereWithinMiles("location", point, 0.1);
-						ParseObject group = query.getFirst();
-						/* Create the group member */
-						ParseObject member = new ParseObject("GroupMembers");
-						member.put("user", ParseUser.getCurrentUser());
-						member.put("group", group);
-						member.save();
-					} catch (ParseException e1) {
-						e1.printStackTrace();
+			public void done(List<ParseObject> groups, ParseException e) {
+				if(e == null) {
+					if(groups.size() != 0) {    //make sure there are actually items in the list
+						if(groups.get(0) != null) {    //make sure the first item is real
+							//changes the text if the user is in the list and grab a reference to them
+							joinButton.setText("Unjoin");
+							currentMember = groups.get(0);
+						}
 					}
-					joinButton.setText("Unjoin");
-				}
-				else {
-					joinButton.setText("Join");
 				}
 			}
 		});
 		
+		joinButton.setOnClickListener(new OnClickListener() {
+			@Override
+			public void onClick(View arg0) {
+				if(joinButton.getText().equals("Join")) {
+					try {
+						/* Create the group member */
+						ParseObject member = new ParseObject("GroupMembers");
+						member.put("user", ParseUser.getCurrentUser());
+						member.put("activity", getIntent().getStringExtra("activityText"));
+						member.put("place", getIntent().getStringExtra("locationText"));
+						member.put("group", groupID);
+						member.save();
+					} catch (ParseException e) {
+						e.printStackTrace();
+					}
+					joinButton.setText("Unjoin");
+					AlertDialog.Builder dlgAlert  = new AlertDialog.Builder(GroupActivity.this);
+					dlgAlert.setMessage("You have joined the group!");
+					dlgAlert.setTitle("Fitivity");
+					dlgAlert.setPositiveButton("OK", null);
+					dlgAlert.setCancelable(true);
+					dlgAlert.create().show();
+				}
+				else {
+					/* Create the group member */
+					currentMember.deleteInBackground();
+					joinButton.setText("Join");
+					AlertDialog.Builder dlgAlert  = new AlertDialog.Builder(GroupActivity.this);
+					dlgAlert.setMessage("You have left the group!");
+					dlgAlert.setTitle("Fitivity");
+					dlgAlert.setPositiveButton("OK", null);
+					dlgAlert.setCancelable(true);
+					dlgAlert.create().show();
+				}
+			}
+		});
+		
+		//click to view all group members
 		membersButton.setOnClickListener(new OnClickListener() {
 			public void onClick(View v) {
 				Intent intent = new Intent();
@@ -102,9 +148,52 @@ public class GroupActivity extends Activity {
 				startActivity(intent);
 			}
 		});
+		
+		//show the location of the group on the map
+		mapButton.setOnClickListener(new OnClickListener() {
+			@Override
+			public void onClick(View arg0) {
+				//TODO: LOAD MAP LOCATION
+			}
+		});
 
+		//click to propose a group activity
 		groupActivity.setOnClickListener(new OnClickListener() {
 			public void onClick(View v) {
+				if(firstDate != null && secondDate != null) {
+					//grab the dates that the first two most recent objects were created at
+					Date date1 = firstDate.getCreatedAt();
+					Date date2 = secondDate.getCreatedAt();
+					
+					/**
+					 * This is very gross looking but it goes as follow:
+					 * 1. Check if today is a new day, if it is not...
+					 * 2. Convert the two Dates to Strings
+					 * 3. Attempt to grab the characters between 0 and 9 in the string
+					 * 4. Make sure there are at least 10 characters available in the string
+					 */
+					if(date1 != null && date2 != null) {
+						String strDate1 = date1.toString().substring(0, Math.min(date1.toString().length(), 9));
+						String strDate2 = date2.toString().substring(0, Math.min(date2.toString().length(), 9));
+						
+						//if today does not match the last date, its a new day so we are under the limit
+						//if the dates are equal, not allowed: return false
+						if(!today.equals(strDate1)) {
+							underDailyLimit = true;
+						}
+						else if(strDate1.equals(strDate2)) {
+							underDailyLimit = false;
+						}
+						else {
+							underDailyLimit = true;
+						}
+					}
+					else {
+						underDailyLimit = true;
+					}
+				}
+				
+				//if we are in fact under the daily limit for activities, open the group activity dialog box
 				if(underDailyLimit) {
 					final EditText input = new EditText(GroupActivity.this);
 					input.setSingleLine(true);
@@ -131,12 +220,11 @@ public class GroupActivity extends Activity {
 										groupActivity.put("creator", ParseUser.getCurrentUser());
 										groupActivity.put("activityMessage", value);
 										groupActivity.put("postType", 1);
+										groupActivity.put("activityCount", 0);
 	
 										ParseObject feedActivity = new ParseObject("ActivityEvent");
 										feedActivity.put("group", group);
 										feedActivity.put("creator", ParseUser.getCurrentUser());
-										feedActivity.put("type", "GROUP");
-										feedActivity.put("status", "N/A");
 										feedActivity.put("number", 1);
 										feedActivity.put("postType", 1);
 										feedActivity.put("proposedActivity", groupActivity);
@@ -157,8 +245,8 @@ public class GroupActivity extends Activity {
 										 * push.setMessage(message);
 										 * push.send();
 										 */
-								} catch (ParseException e1) {
-									e1.printStackTrace();
+								} catch (ParseException e) {
+									e.printStackTrace();
 								}
 							}
 						}).setNegativeButton("Cancel", new DialogInterface.OnClickListener() {
@@ -167,6 +255,12 @@ public class GroupActivity extends Activity {
 				}
 				else {
 					//If the user has already proposed two activities today...
+					AlertDialog.Builder dlgAlert  = new AlertDialog.Builder(GroupActivity.this);
+					dlgAlert.setMessage("You can only propose an activity twice a day!");
+					dlgAlert.setTitle("Limit Reached");
+					dlgAlert.setPositiveButton("OK", null);
+					dlgAlert.setCancelable(true);
+					dlgAlert.create().show();
 				}
 			}
 		});
@@ -185,104 +279,102 @@ public class GroupActivity extends Activity {
 				findActivities();
 			}
 		});
-
+		
 		findActivities();
 	}
 	
-	public boolean checkDailyCount() {
+	/**
+	 * Format the current date into something comparable to the date from Parse
+	 * @return String the current date in a useable format
+	 */
+	public String checkTodaysDate() {
+		//get a calendar object
+		final Calendar c = Calendar.getInstance();
+		//get the day of the week is string format
+		int day = c.get(Calendar.DAY_OF_WEEK);
+		String weekday = getCurrentDayOfWeek(day);
+		//set up a formatter for the month and convert month to string format
+		SimpleDateFormat dateFormat = new SimpleDateFormat("MMM");
+		String monthOfYear = dateFormat.format(c.getTime());
+		//get the day of the month
+		int dayOfMonth = c.get(Calendar.DAY_OF_MONTH);
+		//put it all together to make a String comparable to the date pulled from Parse
+		return ("" + weekday + " " + monthOfYear + " " + dayOfMonth);
+	}
+	
+	/**
+	 * Simple way to convert the current day of week
+	 * to a String instead of a number 1 - 7
+	 * @param day int between 1 and 7
+	 * @return String day of the week, ex. Wed
+	 */
+	public String getCurrentDayOfWeek(int day) {
+		String strDay = "Sun";
+		
+		switch(day) {
+		case 1:
+			strDay = "Sun";
+		case 2:
+			strDay = "Mon";
+		case 3:
+			strDay = "Tue";
+		case 4:
+			strDay = "Wed";
+		case 5:
+			strDay = "Thu";
+		case 6:
+			strDay = "Fri";
+		case 7:
+			strDay = "Sat";
+		}
+		
+		return strDay;
+	}
+	
+	/**
+	 * Makes sure that the user has not already proposed more than 2 activities today.
+	 * @return true if the user is still able to create another activity
+	 */
+	public void checkDailyCount() {
 		ParseQuery query = new ParseQuery("ProposedActivity");
+		query.orderByDescending("createdAt");
 		query.whereEqualTo("creator", ParseUser.getCurrentUser());
 		query.findInBackground(new FindCallback() {
 			@Override
 			public void done(List<ParseObject> objects, ParseException e) {
 				if (e == null) {
-					activityList = objects;
-					setList(activityList);
+					LinkedList<ParseObject> activities = new LinkedList<ParseObject>();
+					for (int i = 0; i < objects.size(); i++) {
+						ParseObject activity = objects.get(i);
+						activities.add(activity);
+					}
+					
+					if(activities.size() < 2) {
+						underDailyLimit = true;
+					}
+					else {
+						firstDate = activities.get(0);
+						secondDate = activities.get(1);
+						
+						//if they are null, the user has not yet created any activities today
+						if (firstDate == null || secondDate == null) {
+							underDailyLimit = true;
+						}
+					}
 				}
 				else {
 					e.printStackTrace();
 				}
 			}
 		});
-		
-		Calendar calendar = Calendar.getInstance();
-		String weekday = getDayOfWeek(Calendar.DAY_OF_WEEK);
-		String month = getMonthOfYear(Calendar.MONTH);
-		String currentDate = "" + (weekday + ", " + (Calendar.DAY_OF_MONTH) + " " + month + " " + (Calendar.YEAR) + " " + (Calendar.HOUR_OF_DAY) + ":" + (Calendar.MINUTE) + ":" + (Calendar.SECOND));
-		
-		//TODO: MAKE SURE USER CAN ONLY PROPOSE TWO ACTIVITIES EACH DAY
-		//iterate through all activities from the user and see if there are at least two from today
-		//for(int i=0; i < activityList.size(); i++) {
-		//	ParseObject temp = activityList.get(i);
-		//}
-		
-		return true;
 	}
 	
-	private String getDayOfWeek(int day) {
-		String strDay;
-		
-		switch(day) {
-		case 0:
-			strDay = "Sun";
-		case 1:
-			strDay = "Mon";
-		case 2:
-			strDay = "Tue";
-		case 3:
-			strDay = "Wed";
-		case 4:
-			strDay = "Thu";
-		case 5:
-			strDay = "Fri";
-		case 6:
-			strDay = "Sat";
-		default: 
-			strDay = "";
-		}
-		
-		return strDay;
-	}
-	
-	private String getMonthOfYear(int month) {
-		String strMonth;
-		
-		switch(month) {
-		case 0:
-			strMonth = "Jan";
-		case 1:
-			strMonth = "Feb";
-		case 2:
-			strMonth = "Mar";
-		case 3:
-			strMonth = "Apr";
-		case 4:
-			strMonth = "May";
-		case 5:
-			strMonth = "Jun";
-		case 6:
-			strMonth = "Jul";
-		case 7:
-			strMonth = "Aug";
-		case 8:
-			strMonth = "Sep";
-		case 9:
-			strMonth = "Oct";
-		case 10:
-			strMonth = "Nov";
-		case 11:
-			strMonth = "Dec";
-		default: 
-			strMonth = "";
-		}
-		
-		return strMonth;
-	}
-	
-	public void setList(List<ParseObject> list) {
-		activityList = list;
-	}
-
+	/**
+	 * If the user clicks on an activity, bring them to that page
+	 * @param v View
+	 * @param pos int position on list
+	 * @param id long
+	 */
 	protected void onListItemClick(View v, int pos, long id) {
 		ParseObject object = (ParseObject) proposedAcitivityList.getItemAtPosition(pos+1);
 		Intent intent = new Intent();
@@ -295,6 +387,9 @@ public class GroupActivity extends Activity {
 		startActivity(intent);
 	}
 
+	/**
+	 * Grab all the activities that have been proposed in the current group
+	 */
 	public void findActivities() {
 		ParseQuery innerQuery = new ParseQuery("Groups");
 		innerQuery.whereEqualTo("place", getIntent().getStringExtra("locationText"));
